# LoopieEngine

./: vcpkg.json
Loopie/: CMakeLists.txt
Loopie/src/Loopie/: LoopieBasics.h
Loopie/src/Loopie/Components/: Camera.cpp  Camera.h  Component.cpp  Component.h  Mesh.cpp  Mesh.h  MeshRenderer.cpp  MeshRenderer.h  ParticleComponent.cpp  ParticleComponent.h  Transform.cpp  Transform.h
Loopie/src/Loopie/Core/: Application.cpp  Application.h  IIdentificable.h  ISerializable.h  InputEventManager.cpp  InputEventManager.h  Math.h  Module.h  Time.cpp  Time.h  Window.cpp  Window.h
Loopie/src/Loopie/Events/: Event.cpp  Event.h  EventTypes.h  IObserver.h
Loopie/src/Loopie/Files/: FileDialog.cpp  Json.cpp  Json.h  MeshImporter.cpp  MeshImporter.h  OrbitalCamera.cpp  OrbitalCamera.h
Loopie/src/Loopie/Helpers/: LoopieHelpers.h
Loopie/src/Loopie/ImGui/: ImGuiManager.cpp
Loopie/src/Loopie/Importers/: ImportSettings.h  MaterialImporter.cpp  MaterialImporter.h  MeshImporter.cpp  MeshImporter.h  TextureImporter.cpp  TextureImporter.h
Loopie/src/Loopie/Math/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  MathTypes.h  MathUtils.h  OBB.cpp  OBB.h  Octree.cpp  Octree.h  OctreeNode.cpp  OctreeNode.h
Loopie/src/Loopie/ParticleSystemEn/: BillBoardComponent.cpp  BillBoardComponent.h  Emitter.cpp  Emitter.h  EmitterInstance.cpp  EmitterInstance.h  ParticleComponent.cpp  ParticleComponent.h  ParticleModule.cpp  ParticleModule.h  ParticleSystem.cpp  ParticleSystem.h
Loopie/src/Loopie/Project/: Project.cpp  Project.h
Loopie/src/Loopie/Render/: BufferLayout.h  Gizmo.cpp  Gizmo.h  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  TextureBuffer.cpp  TextureBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  WrongShader.shader
Loopie/src/Loopie/Resources/: AssetRegistry.cpp  AssetRegistry.h  MetadataRegistry.cpp  MetadataRegistry.h  Resource.cpp  Resource.h  ResourceManager.cpp  ResourceManager.h
Loopie/src/Loopie/Resources/Types/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
Loopie/src/Loopie/Scene/: Entity.cpp  Entity.h  Scene.cpp  Scene.h
LoopieEditor/: CMakeLists.txt  ImGuiLayout.txt  imgui.ini
LoopieEditor/assets/: imgui.ini
LoopieEditor/assets/materials/: ParticleMaterial.mat  defaultMaterial.mat  outlineMaterial.mat
LoopieEditor/assets/models/: BakerHouse.fbx
LoopieEditor/assets/scenes/: DefaultScene.scene
LoopieEditor/assets/shaders/: CorrectShader.shader  DefaultShader.shader  LineShader.shader  ParticleShader.shader  SelectionOutline.shader
LoopieEditor/src/: EditorApplication.cpp  EditorModule.cpp  EditorModule.h  ProjectSetupModule.cpp
LoopieEditor/src/Editor/Events/: EditorEventTypes.h
LoopieEditor/src/Editor/Interfaces/: Interface.h
LoopieEditor/src/Editor/Interfaces/Workspace/: AssetsExplorerInterface.cpp  AssetsExplorerInterface.h  ConsoleInterface.h  EditorMenuInterface.cpp  EditorMenuInterface.h  GameInterface.cpp  GameInterface.h  HierarchyInterface.cpp  HierarchyInterface.h  InspectorInterface.cpp  InspectorInterface.h  SceneInterface.cpp  SceneInterface.h
LoopieEditor/src/Editor/Modules/: EditorModule.cpp  EditorModule.h  ProjectSetupModule.cpp  ProjectSetupModule.h
LoopieEditor/src/Editor/Others/: OrbitalCamera.cpp  OrbitalCamera.h
LoopieEditor/src/Interfaces/: Interface.h
LoopieEditor/src/Interfaces/Editor/: AssetsExplorerInterface.cpp  AssetsExplorerInterface.h  EditorMenuInterface.cpp  EditorMenuInterface.h  HierarchyInterface.cpp  HierarchyInterface.h  InspectorInterface.cpp  InspectorInterface.h  SceneInterface.cpp  SceneInterface.h
LoopieEditor/src/Others/: OrbitalCamera.cpp  OrbitalCamera.h
